--- a/2.html
+++ b/2.html
@@ -6,7 +6,7 @@
   <title>Machine Learning Experiment</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.10.0/matter.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.17.1/matter.min.js"></script>
   <style>
       /* position:absolute;
   left:0;
