--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </div>
   <div class="content">
     <div class="numbers">
-      <h1><a href="1.html">1</a> <a href="2.html">2</a> <a href="3.html">3</a> <a href="4.html">4</a> <a href="5.html">5</a></h1>
+      <h1><a href="1.html">1</a> <a href="2.html">2</a> <a href="3.html">3</a> <a href="4.html">4</a> <a href="5.html">5</a> <a href="6.html">6</a></h1>
     </div>
 
   </div>
